public interface MonitorInterface {
    boolean fireTransition(int transition);
}
