@startuml diagrama-clases

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam ArrowFontSize 11
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 55

' ── Interfaces ──────────────────────────────────────────

interface MonitorInterface {
    +fireTransition(t: int): boolean
}

interface Politica {
    +debeDisparar(t: int): boolean
    +registrarDisparo(t: int): void
    +cualDisparar(candidatos: Set<Integer>): Set<Integer>
    +getEstadisticas(): EstadisticasPolitica
}

note right of Politica
  <b>cualDisparar</b> — contrato: |retorno| ≤ 1
  Fase 1: resuelve pares conflictivos
  {T2/T3} y {T6/T7} → un ganador c/u
  Fase 2: elige al azar (ThreadLocalRandom)
  entre candidatos restantes
end note

' ── Modelo de la red ────────────────────────────────────

class RedPetri {
    -marcado: int[]
    -{static} PRE: int[][]
    -{static} POST: int[][]
    --
    +estaHabilitada(t: int): boolean
    +disparar(t: int): void
    +verificarInvariantesPlaza(): void
    +getMarcado(): int[]
}

class ViolacionInvarianteException <<RuntimeException>> {
    +ViolacionInvarianteException(invariante: String, marcado: int[])
}

' ── Configuración temporal ──────────────────────────────

class VentanaTemporal <<record>> {
    +alfa: long
}

class TiemposTransicion {
    -ventanas: Map<Integer, VentanaTemporal>
    --
    +esTemporal(t: int): boolean
    +getAlfa(t: int): long
}

TiemposTransicion +-- VentanaTemporal

' ── Estadísticas de política ────────────────────────────

class EstadisticasPolitica {
    -disparosT2: int
    -disparosT3: int
    -disparosT6: int
    -disparosT7: int
    --
    +getDisparosT2(): int
    +getDisparosT3(): int
    +getDisparosT6(): int
    +getDisparosT7(): int
    +formatear(): String
}

' ── Monitor ─────────────────────────────────────────────

class Monitor {
    -red: RedPetri
    -politica: Politica
    -tiempos: TiemposTransicion
    -logger: Logger
    -lock: ReentrantLock
    -condiciones: Condition[]
    -colaEspera: int[]
    -{static} TRANSICIONES_CONFLICTO: Set<Integer>
    -tiempoHabilitacion: long[]
    -tiempoObjetivo: long[]
    --
    +fireTransition(t: int): boolean
    -listaParaDisparar(t: int): boolean
    -habilitadaPorEstadoYPolitica(t: int): boolean
    -calcularObjetivo(t: int, habEn: long): long
    -esConflicto(t: int): boolean
}

' ── Políticas ───────────────────────────────────────────

class PoliticaBalanceada {
    -c2: int
    -c3: int
    -c6: int
    -c7: int
    --
    +debeDisparar(t: int): boolean
    +registrarDisparo(t: int): void
    +cualDisparar(candidatos: Set<Integer>): Set<Integer>
    +getEstadisticas(): EstadisticasPolitica
}

class PoliticaPriorizada {
    -c2: int
    -c3: int
    -c6: int
    -c7: int
    --
    +debeDisparar(t: int): boolean
    +registrarDisparo(t: int): void
    +cualDisparar(candidatos: Set<Integer>): Set<Integer>
    +getEstadisticas(): EstadisticasPolitica
}

' ── Hilos ───────────────────────────────────────────────

abstract class Segmento {
    #monitor: MonitorInterface
    --
    +{abstract} run(): void
}

class SegmentoIntermedio {
    -transiciones: int[]
    --
    +run(): void
}

class SegmentoSalida {
    -transicion: int
    -contador: AtomicInteger
    -objetivo: int
    --
    +run(): void
}

' ── Observabilidad ──────────────────────────────────────

class Logger {
    -{static} MAX_BACKUPS: int
    -writer: PrintWriter
    --
    +registrar(t: int): void
    +cerrar(): void
}

class AnalizadorInvariantes {
    -archivo: String
    -objetivo: int
    --
    +calcular(): Resultado
    +analizar(): void
    -reconstruirSecuencias(): List<List<String>>
    -extender(pending, t, expectedLast): void
    -clasificar(secuencia: String): int
}

class "AnalizadorInvariantes.Resultado" as Resultado <<inner>> {
    +total: int
    +conteos: int[]
    +incompletos: int
    +invalidos: int
    --
    +superior(): int
    +inferior(): int
    +aprobados(): int
    +cancelados(): int
    +pctSuperior(): double
    +pctAprobados(): double
}

' ── Punto de entrada ────────────────────────────────────

enum TipoPolitica <<inner Main>> {
    BALANCEADA
    PRIORIZADA
    --
    {static} parsear(arg: String): TipoPolitica
}

class Main {
    -{static} OBJETIVO: int
    -{static} LOG_FILE: String
    -{static} TIEMPOS_DEFAULT: Map<Integer, VentanaTemporal>
    --
    +{static} main(args: String[]): void
    -{static} elegirPolitica(): TipoPolitica
    -{static} ejecutar(tipo: TipoPolitica, tiempos: TiemposTransicion): void
    -{static} iniciarProgreso(contador: AtomicInteger): Thread
}

' ── Relaciones ──────────────────────────────────────────

MonitorInterface <|..  Monitor
Politica         <|..  PoliticaBalanceada
Politica         <|..  PoliticaPriorizada
Segmento         <|--  SegmentoIntermedio
Segmento         <|--  SegmentoSalida

Monitor *-- RedPetri
Monitor *-- TiemposTransicion
Monitor *-- Logger
Monitor o-- Politica

RedPetri ..> ViolacionInvarianteException : "lanza"

Politica ..> EstadisticasPolitica : "retorna"

Segmento .> MonitorInterface : "usa"

AnalizadorInvariantes +-- Resultado
AnalizadorInvariantes ..> Resultado : "retorna"

Main +-- TipoPolitica

Main ..> Monitor               : "crea"
Main ..> Segmento              : "crea"
Main ..> Politica              : "crea"
Main ..> AnalizadorInvariantes : "invoca"

@enduml
